# Rosetta

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.sh  rosetta.rb  test_example.xcstrings.backup_20250628_113006
.github/workflows/: release-homebrew.yml
docs/: realase-homebrew.md
docs/taskbook/: xcstrings-enhancement-summary.md  xcstrings-translation-enhancement.md
scripts/: generate_cover.sh
src/: ai_provider.rs  ascii_art.rs  config.rs  error.rs  key_mappings.rs  lib.rs  main.rs  onboarding.rs  translator.rs  ui.rs  xcstrings.rs
tests/: integration_test.rs
