[package]
name = "rosetta"
version = "0.1.3"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Modern iOS localization tool with beautiful CLI"

[[bin]]
name = "rosetta"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal UI
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = { version = "0.17", features = ["rayon"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File operations
tempfile = "3.8"
dirs = "5.0"

# CLI styling
colored = "2.1"

# AI APIs
google-generative-ai-rs = { version = "0.3.4", features = ["beta"] }
async-openai = "0.18"
anthropic = "0.0.8"